# student_manage_system

./: .gitignore  CMakeLists.txt  CSVTool.cpp  CSVTool.h  LimitedQSqlTableModel.cpp  LimitedQSqlTableModel.h  README.md  aligncenterdelegate.cpp  aligncenterdelegate.h  circleprogressbar.cpp  circleprogressbar.h  circleprogressbar.ui  comboboxdelegate.cpp  comboboxdelegate.h  databaseconnectiondialog.cpp  databaseconnectiondialog.h  databaseconnectiondialog.ui  indexwidget.cpp  indexwidget.h  indexwidget.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  logo.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  properties.cpp  properties.h  resource.qrc  scorechangedialog.cpp  scorechangedialog.h  scorechangedialog.ui  scorewidget.cpp  scorewidget.h  scorewidget.ui  sidebar.cpp  sidebar.h  sidebar.ui  (+12 more)
portraits/: s100002png  s100003png  s100004png
qss/: main-style.qss
